--- a/src/main/resources/SearchSportCenters.fxml
+++ b/src/main/resources/SearchSportCenters.fxml
@@ -19,9 +19,9 @@
       </ImageView>
       <HBox alignment="CENTER" prefHeight="102.0" prefWidth="320.0" style="-fx-background-color: BLACK;">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textAlignment="CENTER" textFill="WHITE">
+            <Label prefHeight="40.0" prefWidth="262.0" text="CONNECT 5" textFill="WHITE">
                <font>
-                  <Font name="Showcard Gothic" size="38.0" />
+                  <Font name="Stalin One" size="25.0" />
                </font>
             </Label>
          </children>
@@ -30,7 +30,7 @@
          <children>
             <Button fx:id="btnSearch" contentDisplay="CENTER" layoutX="197.0" layoutY="319.0" mnemonicParsing="false" onAction="#search" prefHeight="40.0" prefWidth="90.0" style="-fx-background-color: BLACK; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Showcard Gothic" size="12.0" />
+                  <Font name="Sarpanch" size="12.0" />
                </font>
             </Button>
             <TextField fx:id="nomeCentroS" layoutX="60.0" layoutY="59.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-border-radius: 10; -fx-background-radius: 10;" />
@@ -38,17 +38,17 @@
             <TextField fx:id="viaCentroS" layoutX="60.0" layoutY="249.0" prefHeight="34.0" prefWidth="200.0" style="-fx-border-color: BLACK; -fx-background-radius: 10; -fx-border-radius: 10;" />
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="34.0" prefHeight="26.0" prefWidth="200.0" style="-fx-text-fill: BLACK;" text="Sport Center's Name">
                <font>
-                  <Font name="AR DESTINE" size="16.0" />
+                  <Font name="Stalin One" size="10.0" />
                </font>
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="134.0" layoutY="131.0" prefHeight="26.0" prefWidth="48.0" style="-fx-text-fill: BLACK;" text="City" textAlignment="CENTER">
                <font>
-                  <Font name="AR DESTINE" size="16.0" />
+                  <Font name="Stalin One" size="10.0" />
                </font>
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="125.0" layoutY="226.0" prefHeight="26.0" prefWidth="71.0" style="-fx-text-fill: BLACK;" text="Street" textAlignment="CENTER">
                <font>
-                  <Font name="AR DESTINE" size="16.0" />
+                  <Font name="Stalin One" size="10.0" />
                </font>
             </Label>
             <HBox alignment="CENTER" layoutY="388.0" prefHeight="80.0" prefWidth="320.0" spacing="100.0" style="-fx-background-color: transparent;">
@@ -75,7 +75,7 @@
             </HBox>
             <Label fx:id="errorLab" alignment="CENTER" layoutX="29.0" layoutY="322.0" prefHeight="40.0" prefWidth="129.0" textAlignment="CENTER" textFill="#eaff00" visible="false" wrapText="true">
                <font>
-                  <Font name="AR DARLING" size="13.0" />
+                  <Font name="Sarpanch" size="13.0" />
                </font>
             </Label>
          </children>
