--- a/src/main/resources/Connect5.fxml
+++ b/src/main/resources/Connect5.fxml
@@ -32,7 +32,7 @@
       </HBox>
       <VBox alignment="CENTER" layoutY="339.0" prefHeight="231.0" prefWidth="320.0" spacing="50.0" style="-fx-border-width: 1 0 0 0 px; -fx-border-color: BLACK;">
          <children>
-            <Button fx:id="btnLog" mnemonicParsing="false" onAction="#loginController" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Login" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btnLog" mnemonicParsing="false" onAction="#login" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: BLACK; -fx-background-radius: 20;" text="Login" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Showcard Gothic" size="12.0" />
                </font>
